[gd_scene load_steps=15 format=3 uid="uid://dsojbxfvy4pk8"]

[ext_resource type="Script" path="res://Scripts/level_selection.gd" id="1_a5ygt"]
[ext_resource type="Shader" path="res://Resources/blur.gdshader" id="3_m1au8"]
[ext_resource type="Script" path="res://Scripts/level_button.gd" id="4_iskqh"]
[ext_resource type="Theme" uid="uid://jnbngevfqoh4" path="res://Resources/main_menu_buttons.tres" id="4_l0owf"]
[ext_resource type="FontFile" uid="uid://cd2d0made820k" path="res://Resources/Fonts/Default.ttf" id="5_hf6kd"]
[ext_resource type="PackedScene" uid="uid://mdwboriqudwf" path="res://Scenes/level_1.tscn" id="5_t36g4"]
[ext_resource type="PackedScene" uid="uid://cwjxb457j2bxv" path="res://Scenes/level_2.tscn" id="6_rbafn"]
[ext_resource type="Texture2D" uid="uid://co4dc1fhpwqs7" path="res://Resources/Images/snowflake.png" id="6_vkais"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pc7b3"]
shader = ExtResource("3_m1au8")
shader_parameter/blur = 2.0

[sub_resource type="Curve" id="Curve_oayoq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.446667, 1), 0.0749247, 0.0749247, 0, 0, Vector2(0.566667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_vuq5r"]
curve = SubResource("Curve_oayoq")

[sub_resource type="Curve" id="Curve_pkklo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.386667, 1), 0.0, 0.0, 0, 0, Vector2(0.626667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_xg32v"]
curve = SubResource("Curve_pkklo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ct4ax"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 400, 1)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 40.0
angular_velocity_min = -30.0
angular_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_xg32v")
alpha_curve = SubResource("CurveTexture_vuq5r")

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5ygt")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pc7b3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -58.0
offset_right = 90.5
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_l0owf")
text = "Level 1"
script = ExtResource("4_iskqh")
levelScene = ExtResource("5_t36g4")

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_l0owf")
text = "            Level 2            "
script = ExtResource("4_iskqh")
levelScene = ExtResource("6_rbafn")

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_l0owf")
text = "Level 3"
script = ExtResource("4_iskqh")

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_l0owf")
text = "Level 4"
script = ExtResource("4_iskqh")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_l0owf")
text = "Back"

[node name="Title" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 4608.0
offset_bottom = 875.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("5_hf6kd")
theme_override_font_sizes/font_size = 300
text = "Level Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="Title/Control"]
z_index = -1
position = Vector2(20, 182.5)
amount = 16
process_material = SubResource("ParticleProcessMaterial_ct4ax")
texture = ExtResource("6_vkais")
lifetime = 5.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Level1" to="MarginContainer/VBoxContainer/Level1" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level2" to="MarginContainer/VBoxContainer/Level2" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level3" to="MarginContainer/VBoxContainer/Level3" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level4" to="MarginContainer/VBoxContainer/Level4" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
